# mydle

./: Cargo.toml  README.md  desing.md
examples/: ecs.rs  exp.rs  health.rs  query.rs
src/: components.rs  lib.rs  main.rs  resources.rs  server.rs  systems.rs
src/components/: armor.rs  attack.rs  combat.rs  damage.rs  equipment.rs  exp.rs  flags.rs  heal.rs  health.rs  invenotry.rs  level.rs  mana.rs  name.rs  race.rs  stats.rs  target.rs  weapon.rs  zone.rs
src/components/zone/: mob_counter.rs
src/data/: char.rs  combat_tabs.rs  mod.rs
src/network/: mod.rs
src/systems/: combat.rs  healing.rs
src/systems/zone/: clean.rs  mod.rs  spawn.rs
src/ui/: app.rs  mod.rs
src/ui/character/: mod.rs
