[package]
name = "my_idle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
eframe = {version="0.27.2",  default-features = false, features = [
    # accesskit struggles with threading
    "default_fonts",
    "wgpu",
    "wayland",
]}
egui_extras = "0.27.2"
env_logger = {version="0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
]}
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
specs = { version = "0.20.0", features = ["specs-derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
